--- a/content/vrmonitor/translations/vrmonitor_errors_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_danish.txt
@@ -979,7 +979,7 @@
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HDCPError_Header"	"SteamVR-fejl"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description"	"<span>Din</span> GPU har problemer med at kommunikere med dit HMD, hvilket resulterer i en HDCP-fejl. Prøv at fjerne alle adapterer eller kabelforlængere. Prøv en anden port i din GPU, hvis en anden er tilgængelig.<b>Brug knappen nedenfor til at nulstille HMD'et, så GPU'en prøver igen.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Læs mere</a>."
+"Warning_DismissableWarning_HDCPError_Description"	"<span>Din</span> GPU har problemer med at kommunikere med dit HMD, hvilket resulterer i en HDCP-fejl. Prøv at fjerne alle adaptere eller kabelforlængere. Prøv en anden port i din GPU, hvis en anden er tilgængelig.<b>Brug knappen nedenfor til at nulstille HMD'et, så GPU'en prøver igen.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Læs mere</a>."
 "[english]Warning_DismissableWarning_HDCPError_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
 "Warning_DismissableWarning_HDCPError_Action"	"Nulstil headset"
 "[english]Warning_DismissableWarning_HDCPError_Action"	"Reset Headset"
@@ -1287,5 +1287,21 @@
 "[english]Warning_DismissableWarning_EnableAppContainers_Action"	"Update Permissions"
 "Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
 "[english]Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR-fejl"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR Error"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Din</span> GPU har problemer med at kommunikere med dit HMD, hvilket resulterer i en HDCP-fejl. Prøv at fjerne alle adaptere eller kabelforlængere. Prøv en anden port i din GPU, hvis en anden er tilgængelig. <p> <b>Brug knappen nedenfor til at slå kompatibilitetstilstand for den ældre HDCP 1.4-udgave til/fra, og GENSTART SteamVR.</b>"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <p> <b>Use the button below to toggle the HDCP 1.4 Legacy Compatibility mode and RESTART SteamVR.</b>"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Genstart (HDCP)"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Restart (HDCP)"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"Warning_DismissableWarning_InstallWMRPrompt_Header"	"Installer Windows Mixed Reality-driver?"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Header"	"Install Windows Mixed Reality driver?"
+"Warning_DismissableWarning_InstallWMRPrompt_Description"	"En driver er påkrævet for at bruge Windows Mixed Reality-headsets i SteamVR."
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Description"	"A driver is required to run Windows Mixed Reality headsets on SteamVR."
+"Warning_DismissableWarning_InstallWMRPrompt_Action"	"Installer"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Action"	"Install"
+"Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
 }
 }
