--- a/content/vrmonitor/translations/vrmonitor_errors_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_german.txt
@@ -987,7 +987,7 @@
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HDCPError_Header"	"SteamVR-Fehler"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description"	"<span>Ihre</span> Grafikkarte hat Probleme dabei, mit Ihrem VR-Headset zu kommunizieren, wodurch ein HDCP-Fehler aufgetreten ist. Bitte entfernen Sie alle Kabeladapter und -verlängerungen. Testen Sie einen anderen Anschluss an Ihrer Grafikkarte, falls vorhanden. <b>Klicken Sie auf den Link unten, um das VR-Headset zurückzusetzen, damit die Grafikkarte es erneut versuchen kann.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Weitere Informationen</a>"
+"Warning_DismissableWarning_HDCPError_Description"	"<span>Ihre</span> Grafikkarte hat Probleme, mit Ihrem VR-Headset zu kommunizieren, wodurch ein HDCP-Fehler aufgetreten ist. Bitte entfernen Sie alle Kabeladapter und -verlängerungen. Testen Sie einen anderen Anschluss an Ihrer Grafikkarte, falls vorhanden. <b>Klicken Sie auf den Link unten, um das VR-Headset zurückzusetzen, damit die Grafikkarte es erneut versuchen kann.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Weitere Informationen</a>"
 "[english]Warning_DismissableWarning_HDCPError_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
 "Warning_DismissableWarning_HDCPError_Action"	"VR-Headset zurücksetzen"
 "[english]Warning_DismissableWarning_HDCPError_Action"	"Reset Headset"
@@ -1295,5 +1295,21 @@
 "[english]Warning_DismissableWarning_EnableAppContainers_Action"	"Update Permissions"
 "Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
 "[english]Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR-Fehler"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR Error"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Ihre</span> Grafikkarte hat Probleme, mit Ihrem VR-Headset zu kommunizieren, wodurch ein HDCP-Fehler aufgetreten ist. Bitte entfernen Sie alle Kabeladapter und -verlängerungen. Testen Sie einen anderen Anschluss an Ihrer Grafikkarte, falls vorhanden. <p> <b>Verwenden Sie die Schaltfläche unten, um den Kompatibilitätsmodus für HDCP 1.4 zu aktiveren und SteamVR NEU ZU STARTEN.</b>"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <p> <b>Use the button below to toggle the HDCP 1.4 Legacy Compatibility mode and RESTART SteamVR.</b>"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Neu starten (HDCP)"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Restart (HDCP)"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"Warning_DismissableWarning_InstallWMRPrompt_Header"	"Treiber für Windows Mixed Reality installieren?"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Header"	"Install Windows Mixed Reality driver?"
+"Warning_DismissableWarning_InstallWMRPrompt_Description"	"Ein Treiber wird benötigt, um Windows-Mixed-Reality-VR-Headsets auf SteamVR nutzen zu können."
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Description"	"A driver is required to run Windows Mixed Reality headsets on SteamVR."
+"Warning_DismissableWarning_InstallWMRPrompt_Action"	"Installieren"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Action"	"Install"
+"Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
 }
 }
