--- a/content/vrmonitor/translations/vrmonitor_errors_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_spanish.txt
@@ -979,7 +979,7 @@
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HDCPError_Header"	"Error de SteamVR"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description"	"<span>Tu</span> GPU está teniendo problemas para comunicarse con el visor, lo cual resulta en un error de HDCP. Prueba a quitar cualquier adaptador o extensión de cable que estés usando. Prueba con otro puerto de la GPU si hay alguno disponible. <b>Utiliza el enlace de abajo para reiniciar el visor y que la GPU lo intente de nuevo.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Más información</a>."
+"Warning_DismissableWarning_HDCPError_Description"	"<span>Tu</span> GPU está teniendo problemas para comunicarse con el visor, lo que resulta en un error de HDCP. Prueba a quitar cualquier adaptador o alargador de cable que estés usando. Prueba con otro puerto de la GPU si hay alguno disponible. <b>Utiliza el enlace de abajo para reiniciar el visor y que la GPU lo intente de nuevo.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Más información</a>."
 "[english]Warning_DismissableWarning_HDCPError_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
 "Warning_DismissableWarning_HDCPError_Action"	"Reiniciar visor"
 "[english]Warning_DismissableWarning_HDCPError_Action"	"Reset Headset"
@@ -1253,7 +1253,7 @@
 "[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL"	"vrmonitor://open/settings/basestation/recovery"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Problema de conexión de pantalla"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Display Connection Trouble"
-"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Tu tarjeta gráfica no puede conectarse con éxito a la pantalla de tu visor. Intenta quitar cualquier adaptador de cable o extensor que estés utilizando. Prueba con otro puerto en su GPU si hay uno disponible. <b>Utiliza el enlace de reinicio a continuación para reiniciar el visor y que la GPU lo intente nuevamente.</b>"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Tu tarjeta gráfica no consigue conectarse a la pantalla del visor. Prueba a quitar cualquier adaptador o alargador de cable que estés usando. Prueba con otro puerto de la GPU si hay alguno disponible. <b>Utiliza el enlace de abajo para reiniciar el visor y que la GPU lo intente de nuevo.</b>"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Your graphics card cannot successfully connect to your HMD display. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b>"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Reiniciar visor"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Reset Headset"
@@ -1287,5 +1287,21 @@
 "[english]Warning_DismissableWarning_EnableAppContainers_Action"	"Update Permissions"
 "Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
 "[english]Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"Error de SteamVR"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR Error"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Tu</span> GPU está teniendo problemas para comunicarse con el visor, lo que resulta en un error de HDCP. Prueba a quitar cualquier adaptador o alargador de cable que estés usando. Prueba con otro puerto de la GPU si hay alguno disponible. <p> <b>Utiliza el botón de abajo para cambiar al modo de compatibilidad con HDCP 1.4 y REINICIAR SteamVR.</b>"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <p> <b>Use the button below to toggle the HDCP 1.4 Legacy Compatibility mode and RESTART SteamVR.</b>"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Reiniciar (HDCP)"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Restart (HDCP)"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"Warning_DismissableWarning_InstallWMRPrompt_Header"	"¿Quieres instalar el controlador para Windows Mixed Reality?"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Header"	"Install Windows Mixed Reality driver?"
+"Warning_DismissableWarning_InstallWMRPrompt_Description"	"Hace falta un controlador para utilizar los visores de Windows Mixed Reality en SteamVR."
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Description"	"A driver is required to run Windows Mixed Reality headsets on SteamVR."
+"Warning_DismissableWarning_InstallWMRPrompt_Action"	"Instalar"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Action"	"Install"
+"Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
 }
 }
