--- a/content/vrmonitor/translations/vrmonitor_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_turkish.txt
@@ -1363,7 +1363,7 @@
 "[english]WorkshopUpload_Progress_PreparingContent"	"Processing files..."
 "WorkshopUpload_Progress_UploadingContent"	"Dosyalar yükleniyor..."
 "[english]WorkshopUpload_Progress_UploadingContent"	"Uploading files..."
-"WorkshopUpload_Progress_UploadingPreview"	"Önizleme dosyası yükleniyor..."
+"WorkshopUpload_Progress_UploadingPreview"	"Ön izleme dosyası yükleniyor..."
 "[english]WorkshopUpload_Progress_UploadingPreview"	"Uploading preview file..."
 "WorkshopUpload_Progress_CommittingChanges"	"Bitiriliyor..."
 "[english]WorkshopUpload_Progress_CommittingChanges"	"Finishing up..."
@@ -1935,7 +1935,7 @@
 "[english]BugReporter_ReportType_FeatureRequest"	"Feature Request"
 "BugReporter_ReportType_Feedback"	"Geri bildirim"
 "[english]BugReporter_ReportType_Feedback"	"Feedback"
-"BugReporter_PreviewReport"	"Raporu Önizle"
+"BugReporter_PreviewReport"	"Raporu Ön İzle"
 "[english]BugReporter_PreviewReport"	"Preview Report"
 "BugReporter_IncludeReportAndLogs"	"Sistem Raporu ve Kayıtları Dâhil Et"
 "[english]BugReporter_IncludeReportAndLogs"	"Include System Report and Logs"
@@ -1953,7 +1953,7 @@
 "[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nYou should receive a confirmation email shortly."
 "BugReporter_SubmissionFailure"	"Gönderim Başarısız.\n\nHata Toplayıcı meşgul olabilir. Lütfen tekrar göndermeyi deneyin.\n\nHata: BR-%1\n"
 "[english]BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: BR-%1\n"
-"BugReporter_PreviewReportTitle"	"Bir Hata Bildir - Raporu Önizle"
+"BugReporter_PreviewReportTitle"	"Bir Hata Bildir - Raporu Ön İzle"
 "[english]BugReporter_PreviewReportTitle"	"Report a Bug - Preview Report"
 "BugReporter_ProgressSubmitting"	"Gönderiliyor..."
 "[english]BugReporter_ProgressSubmitting"	"Submitting..."
