--- a/content/vrmonitor/translations/vrmonitor_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_danish.txt
@@ -977,7 +977,7 @@
 "[english]Settings_Camera_StartTest"	"Test Camera Rate"
 "Settings_Camera_StopTest"	"Stop test"
 "[english]Settings_Camera_StopTest"	"Stop Test"
-"Settings_USB_EnhancedStatus"	"Vis oplysninger"
+"Settings_USB_EnhancedStatus"	"Vis detaljer"
 "[english]Settings_USB_EnhancedStatus"	"Show details"
 "PerfTestResults_CPU_OneCore"	"(1 kerne)"
 "[english]PerfTestResults_CPU_OneCore"	"(1 core)"
