--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -33,10 +33,12 @@
 "StatusError_CompositorNotFullscreen" "A key component of SteamVR is not working correctly."
 "StatusError_CompositorNotRunning" "A key component of SteamVR is not working correctly."
 "StatusError_CompositorTooManyRunning" "A key component of SteamVR is not working correctly."
+"StatusError_PrismNotRunning" "A key component of SteamVR is not working correctly."
 "StatusError_VRServerNotRunning" "A key component of SteamVR is not working correctly."
 "StatusError_TrackingDevice_NotValid" "This device is not recognized."
 "StatusError_Chaperone_Error" "SteamVR has encountered an error with its Chaperone system."
 "StatusError_LighthouseEvent" "SteamVR has encountered a Tracking system error."
+"StatusError_SteamVRServiceNotInstalled" "SteamVR helper service is not installed."
 "StatusError_UnknownError" "Unknown Error (%1)" 
 
 "StatusWarning_None" ""
@@ -598,6 +600,7 @@
 "Advanced_NormalFrame" "Normal Frame"
 "Advanced_MotionSmoothedFrame" "Reprojected w/ Motion Smoothing"
 "Advanced_ReprojectedFrame" "Reprojected w/o Motion Smoothing"
+"Advanced_OneThirdFramerate" "One-third framerate"
 "Advanced_DroppedFrame" "Display Error"
 "Advanced_AppRequestedThrottling" "App requested throttling (cpu bound)"
 
