--- a/content/vrmonitor/translations/vrmonitor_errors_bulgarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_bulgarian.txt
@@ -979,7 +979,7 @@
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HDCPError_Header"	"SteamVR грешка"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description"	"Видеокартата <span>Ви</span> се натъква на проблеми при комуникацията с ВР шлема. Резултатът от това е HDCP грешка. Опитайте да премахнете кабелните адаптери или удължители, които използвате. Опитайте друг порт на видеокартата Ви, ако един от тях е зает. <b>Използвайте връзката за нулиране по-долу, така че да сторите това за ВР шлема и опитайте отново.</b><p><a title=\"Отстраняване на неизправности във ВР шлема\" style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Научете още</a>."
+"Warning_DismissableWarning_HDCPError_Description"	"Видеокартата <span>Ви</span> се натъква на проблеми при комуникацията с ВР шлема. Резултатът от това е HDCP (High-Bandwidth Digital Content Protection — „Широколентова система за защита на цифрово съдържание“) грешка. Опитайте да премахнете кабелните адаптери или удължители, които използвате. Опитайте друг порт на видеокартата Ви, ако е достъпен такъв. <b>Използвайте връзката за нулиране по-долу, така че да сторите това за ВР шлема и опитайте отново.</b><p><a title=\"Отстраняване на неизправности във ВР шлема\" style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Научете още</a>."
 "[english]Warning_DismissableWarning_HDCPError_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
 "Warning_DismissableWarning_HDCPError_Action"	"Нулиране на ВР шлема"
 "[english]Warning_DismissableWarning_HDCPError_Action"	"Reset Headset"
@@ -1287,5 +1287,21 @@
 "[english]Warning_DismissableWarning_EnableAppContainers_Action"	"Update Permissions"
 "Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
 "[english]Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR грешка"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR Error"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"Видеокартата <span>Ви</span> се натъква на проблеми при комуникацията с ВР шлема. Резултатът от това е HDCP (High-Bandwidth Digital Content Protection — „Широколентовата система за защита на цифрово съдържание“) грешка. Опитайте да премахнете кабелните адаптери или удължители, които използвате. Опитайте друг порт на видеокартата Ви, ако е достъпен такъв.<p><b>Използвайте бутона по-долу, така че да превключите режима за HDCP 1.4 наследствена съвместимост и РЕСТАРТИРАЙТЕ SteamVR.</b>"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <p> <b>Use the button below to toggle the HDCP 1.4 Legacy Compatibility mode and RESTART SteamVR.</b>"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Рестартиране (HDCP)"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Restart (HDCP)"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"Warning_DismissableWarning_InstallWMRPrompt_Header"	"Инсталиране на драйвер за Windows смесена реалност?"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Header"	"Install Windows Mixed Reality driver?"
+"Warning_DismissableWarning_InstallWMRPrompt_Description"	"Изисква се драйвер, за да бъдат пуснати шлемове на Windows смесена реалност в SteamVR."
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Description"	"A driver is required to run Windows Mixed Reality headsets on SteamVR."
+"Warning_DismissableWarning_InstallWMRPrompt_Action"	"Инсталиране"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Action"	"Install"
+"Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
 }
 }
