--- a/content/vrmonitor/translations/vrmonitor_errors_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_greek.txt
@@ -1305,5 +1305,21 @@
 "[english]Warning_DismissableWarning_EnableAppContainers_Action"	"Update Permissions"
 "Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
 "[english]Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"Σφάλμα SteamVR"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR Error"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Η</span> GPU έχει πρόβλημα στην επικοινωνία με το headset σας, με αποτέλεσμα ένα σφάλμα HDCP. Δοκιμάστε να αφαιρέσετε οποιουσδήποτε προσαρμογείς ή επεκτάσεις καλωδίων χρησιμοποιείτε. Δοκιμάστε άλλη θύρα στη GPU σας αν υπάρχει μία διαθέσιμη. <p> <b>Χρησιμοποιήστε το παρακάτω κουμπί για εναλλαγή σε παλαιού τύπου λειτουργία συμβατότητας HDCP 1.4 και ΕΠΑΝΕΚΚΙΝΗΣΤΕ το SteamVR.</b>"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <p> <b>Use the button below to toggle the HDCP 1.4 Legacy Compatibility mode and RESTART SteamVR.</b>"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Επανεκκίνηση (HDCP)"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Restart (HDCP)"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"Warning_DismissableWarning_InstallWMRPrompt_Header"	"Εγκατάσταση οδηγού Windows Mixed Reality;"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Header"	"Install Windows Mixed Reality driver?"
+"Warning_DismissableWarning_InstallWMRPrompt_Description"	"Απαιτείται ένας οδηγός για την εκτέλεση του headset Windows Mixed Reality στο SteamVR."
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Description"	"A driver is required to run Windows Mixed Reality headsets on SteamVR."
+"Warning_DismissableWarning_InstallWMRPrompt_Action"	"Εγκατάσταση"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Action"	"Install"
+"Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
 }
 }
