--- a/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
@@ -1307,5 +1307,21 @@
 "[english]Warning_DismissableWarning_EnableAppContainers_Action"	"Update Permissions"
 "Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
 "[english]Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR-fel"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR Error"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Din</span> GPU har problem med att kommunicera med ditt headset, vilket orsakar ett HDCP-fel. Ta bort eventuella kabeladaptrar eller förlängare du använder. Testa en annan port på din GPU om en finns tillgänglig. <p> <b>Använd knappen nedan för att aktivera bakåtkompatibla HDCP 1.4 och STARTA OM SteamVR.</b>"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <p> <b>Use the button below to toggle the HDCP 1.4 Legacy Compatibility mode and RESTART SteamVR.</b>"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Starta om (HDCP)"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Restart (HDCP)"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"Warning_DismissableWarning_InstallWMRPrompt_Header"	"Installera Windows Mixed Reality-drivrutin?"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Header"	"Install Windows Mixed Reality driver?"
+"Warning_DismissableWarning_InstallWMRPrompt_Description"	"En drivrutin krävs för att köra Windows Mixed Reality-headset på SteamVR."
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Description"	"A driver is required to run Windows Mixed Reality headsets on SteamVR."
+"Warning_DismissableWarning_InstallWMRPrompt_Action"	"Installera"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Action"	"Install"
+"Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
 }
 }
