--- a/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
@@ -1287,5 +1287,11 @@
 "[english]Warning_DismissableWarning_EnableAppContainers_Action"	"Update Permissions"
 "Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
 "[english]Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR 錯誤"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR Error"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"重新啟動（HDCP）"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Restart (HDCP)"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
 }
 }
