--- a/content/vrmonitor/translations/vrmonitor_errors_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_thai.txt
@@ -1305,5 +1305,21 @@
 "[english]Warning_DismissableWarning_EnableAppContainers_Action"	"Update Permissions"
 "Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
 "[english]Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"ข้อผิดพลาด SteamVR"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Header"	"SteamVR Error"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"GPU <span>ของคุณ</span> กำลังมีปัญหาในการสื่อสารกับหน้าจอสวมศีรษะของคุณ จึงทำให้เกิดข้อผิดพลาด HDCP กรุณาลองถอดสายอะแดปเตอร์หรือส่วนต่อขยายสายใดก็ตามที่คุณกำลังใช้อยู่ ลองใช้พอร์ตอื่นบน GPU ของคุณหากมีให้ใช้ได้ <p> <b>ใช้ปุ่มด้านล่างนี้เพื่อกดสลับโหมดความเข้ากันได้กับรุ่น HDCP 1.4 ดั้งเดิม และเริ่มต้น SteamVR ใหม่อีกครั้ง</b>"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <p> <b>Use the button below to toggle the HDCP 1.4 Legacy Compatibility mode and RESTART SteamVR.</b>"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"เริ่มใหม่ (HDCP)"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_Action"	"Restart (HDCP)"
+"Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"[english]Warning_DismissableWarning_HDCPErrorWithToggleOption_ActionURL"	"vrmonitor://togglehdcpcompatibility"
+"Warning_DismissableWarning_InstallWMRPrompt_Header"	"ติดตั้งไดรเวอร์ Windows Mixed Reality หรือไม่?"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Header"	"Install Windows Mixed Reality driver?"
+"Warning_DismissableWarning_InstallWMRPrompt_Description"	"จำเป็นต้องมีไดรเวอร์เพื่อเริ่มเปิดเครื่องสวมศีรษะ Windows Mixed Reality บน SteamVR"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Description"	"A driver is required to run Windows Mixed Reality headsets on SteamVR."
+"Warning_DismissableWarning_InstallWMRPrompt_Action"	"ติดตั้ง"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_Action"	"Install"
+"Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
+"[english]Warning_DismissableWarning_InstallWMRPrompt_ActionURL"	"vrmonitor://installdriver/wmr"
 }
 }
